{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 27,
  "lineage": "9481e6a6-98fb-e17a-d875-37a901b737a0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "terra-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:673465589102:loadbalancer/terra-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "terra-elb-1384634953.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/index.html",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terra-elb",
            "idle_timeout": 100,
            "instances": [
              "i-08498c73045c9590c",
              "i-0d9b3ce49da22331a"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terra-elb",
            "security_groups": [
              "sg-012b47993266339d1"
            ],
            "source_security_group": "673465589102/allow_http",
            "source_security_group_id": "sg-012b47993266339d1",
            "subnets": [
              "subnet-00f701ae9a7d35cd6",
              "subnet-0ba6095c7b46319f7"
            ],
            "tags": {
              "Name": "terraform-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_instance.webservers",
            "aws_security_group.webservers",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webservers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff8a91507f77f867",
            "arn": "arn:aws:ec2:us-east-1:673465589102:instance/i-08498c73045c9590c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-08498c73045c9590c",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0adaacaed50fa8f5a",
            "private_dns": "ip-10-20-1-187.ec2.internal",
            "private_ip": "10.20.1.187",
            "public_ip": "54.237.214.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0245f246a90dc6b61",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-012b47993266339d1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba6095c7b46319f7",
            "tags": {
              "Name": "Server-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-012b47993266339d1"
            ]
          },
          "depends_on": [
            "aws_security_group.webservers",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff8a91507f77f867",
            "arn": "arn:aws:ec2:us-east-1:673465589102:instance/i-0d9b3ce49da22331a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0d9b3ce49da22331a",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-02be243bcde13913d",
            "private_dns": "ip-10-20-2-15.ec2.internal",
            "private_ip": "10.20.2.15",
            "public_ip": "54.225.23.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0796b1f241dfe9c3d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-012b47993266339d1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f701ae9a7d35cd6",
            "tags": {
              "Name": "Server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-012b47993266339d1"
            ]
          },
          "depends_on": [
            "aws_security_group.webservers",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c990c25a2e88f760",
            "owner_id": "673465589102",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0719bfb74e59f3151"
          },
          "depends_on": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-034a677d1ae2972fc",
            "owner_id": "673465589102",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c990c25a2e88f760",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRouteTable"
            },
            "vpc_id": "vpc-0719bfb74e59f3151"
          },
          "depends_on": [
            "aws_internet_gateway.terra_igw",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed25fe0d9bdf1f12",
            "route_table_id": "rtb-034a677d1ae2972fc",
            "subnet_id": "subnet-0ba6095c7b46319f7"
          },
          "depends_on": [
            "aws_route_table.public_rt",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0597ed3bf5c54d66a",
            "route_table_id": "rtb-034a677d1ae2972fc",
            "subnet_id": "subnet-00f701ae9a7d35cd6"
          },
          "depends_on": [
            "aws_route_table.public_rt",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webservers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:673465589102:security-group/sg-012b47993266339d1",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012b47993266339d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": null,
            "owner_id": "673465589102",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0719bfb74e59f3151"
          },
          "depends_on": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:673465589102:subnet/subnet-0ba6095c7b46319f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-0ba6095c7b46319f7",
            "map_public_ip_on_launch": true,
            "owner_id": "673465589102",
            "tags": {
              "Name": "Subnet-1"
            },
            "vpc_id": "vpc-0719bfb74e59f3151"
          },
          "depends_on": [
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:673465589102:subnet/subnet-00f701ae9a7d35cd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-00f701ae9a7d35cd6",
            "map_public_ip_on_launch": true,
            "owner_id": "673465589102",
            "tags": {
              "Name": "Subnet-2"
            },
            "vpc_id": "vpc-0719bfb74e59f3151"
          },
          "depends_on": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:673465589102:vpc/vpc-0719bfb74e59f3151",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-02decfb360077fd2d",
            "default_route_table_id": "rtb-00a679f3f30f9c116",
            "default_security_group_id": "sg-0671e2d6b960a9212",
            "dhcp_options_id": "dopt-e19f729b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0719bfb74e59f3151",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00a679f3f30f9c116",
            "owner_id": "673465589102",
            "tags": {
              "Name": "TerraVPC"
            }
          }
        }
      ]
    }
  ]
}